--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,8 +15,8 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
 
 open-weather-map-api:
-  base-url: https://api.openweathermap.org/data/2.5
-  api-key: ${OPEN_WEATHER_API_KEY:API_KEY}
+  base-url: https://api.openweathermap.org
+  api-key: ${OPEN_WEATHER_API_KEY:d21af51e285cb140f77d3c84a3bace55}
 
 api-key:
   time_period_in_minutes: 60
